# aegis-admin

./: .gitignore  LICENSE  README.md  pyproject.toml
aegis/core/: app.py  auth.py  engine.py  executor.py  fields.py  introspection.py  optimizer.py  registry.py  validation.py
aegis/templates/admin/: 404.html  bulk_delete.html  create.html  delete.html  edit.html  index.html  list.html
demo/: main.py
demo/templates/: login.html
tests/unit/: test_app.py  test_auth.py  test_autocomplete.py  test_engine_manager.py  test_field_strategy.py  test_introspection.py  test_list_endpoint.py  test_query_optimizer.py  test_registry.py  test_ui_bulk_delete.py  test_ui_create.py  test_ui_dashboard.py  test_ui_delete.py  test_ui_edit.py  test_ui_list.py  test_validation.py
